--- a/themes/maupassant/source/css/_devices.scss
+++ b/themes/maupassant/source/css/_devices.scss
@@ -787,6 +787,9 @@
   .post .post-meta{
     margin:0;
   }
+  .post .post-archive{
+    padding-left: 10px;
+  }
   .post{
     padding: 10px;
   }
