--- a/themes/maupassant/source/css/_devices.scss
+++ b/themes/maupassant/source/css/_devices.scss
@@ -623,6 +623,12 @@
     .post-content {
       font-size: 12rem;
     }
+    .toc-icon {
+      top:85px;
+    }
+    #toc{
+      top:85px;
+    }
   }
 }
 /* ========================= <=768 mobile-l end */
