--- a/themes/maupassant/source/css/style.scss
+++ b/themes/maupassant/source/css/style.scss
@@ -320,6 +320,18 @@ a:focus {
       padding-left: 30px;
     }
   }
+  &:hover{
+    .gallery{
+      .post-img{
+        overflow: hidden;
+        img{
+          transform: scale(1.2);
+          filter: brightness(0.8);
+          transition: transform 0.3s ease;
+        }
+      }
+    }
+  }
 }
 // 文章
 .realPost {
