--- a/themes/maupassant/source/css/style.scss
+++ b/themes/maupassant/source/css/style.scss
@@ -38,6 +38,9 @@ a:active {
 a:focus {
   outline: auto;
 }
+ul{
+  padding-left: 20px;
+}
 *{
   box-sizing: border-box;
   scroll-behavior: smooth;
